tdf#111781 Drawing selection highlight twice in listBoxes

The selection highlight is drawn tiwce: a rectangle and the
background of the text. The fix removes the text backround
by setting it to transparent.

Change-Id: I969cb5b27619df07d0a37f1a38c859dbf2565483
Reviewed-on: https://gerrit.libreoffice.org/47064
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>